# flashfind

./: README.md  build_main_cargo.bat
FlashFind-MVP/: .gitignore  Cargo.toml  EDGE_CASES.md  README.md  create_portable.ps1  quick_test.ps1  test_edge_cases.ps1  version.md
FlashFind-MVP/src/: app.rs  config.rs  error.rs  fast_index.rs  index.rs  indexer.rs  main.rs  persistence.rs  watcher.rs
Test/: benchmark.ps1  test_commands.txt  test_script.ps1
