[package]
name = "flashfind"
version = "0.2.0"
edition = "2021"
authors = ["Ayush Kumar <ayush043@gmail.com>"]

[dependencies]
eframe = "0.27"
egui = "0.27"
walkdir = "2.5"
open = "5.1"
rayon = "1.10"
parking_lot = "0.12"
# FIXED: Added serde feature here
ahash = { version = "0.8", features = ["serde"] }
windows-sys = { version = "0.52", features = ["Win32_UI_Shell", "Win32_Foundation"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
notify = "6.1"