[package]
name = "flashfind"
version = "1.0.0-phase1"
edition = "2021"
authors = ["Ayush Kumar <ayush043@gmail.com>"]

[dependencies]
eframe = "0.27"
egui = "0.27"
walkdir = "2.5"
open = "5.1"
rayon = "1.10"
parking_lot = "0.12"
ahash = { version = "0.8", features = ["serde"] }
windows-sys = { version = "0.52", features = ["Win32_UI_Shell", "Win32_Foundation"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
notify = "6.1"

# Phase 1: Production Hardening Dependencies
thiserror = "1.0"           # Structured error handling
tracing = "0.1"             # Structured logging
tracing-subscriber = "0.3"  # Logging backend
tracing-appender = "0.2"    # Log file rotation
anyhow = "1.0"              # Error context propagation
known-folders = "1.1"       # Proper Windows paths
crossbeam-channel = "0.5"   # Better concurrency primitives

[build-dependencies]
winres = "0.1"
